tests/paczka2/big_fuzzy/63192873.err
Error in line 2: MBggzb9F A730 61,7
Error in line 18: MqJlxfMlNf A96 76,3
Error in line 21: qcdIfQ3Yx A730 45,8
Error in line 24: qcdIfQ3Yx A96 4,1
Error in line 27: qcdIfQ3Yx A200 85,8
Error in line 30: qcdIfQ3Yx A244 161,3
Error in line 40: MqJlxfMlNf S793 96,0
Error in line 50: 4lSV7FKLK A96 88,8
Error in line 57: 4lSV7FKLK A244 95,1
Error in line 65: W5WmmS A244 146,15
Error in line 70: A96 A96 7,1
Error in line 46: W5WmmS A244 59,8
Error in line 71: 4lSV7FKLK A244 6,2
Error in line 60: 8QuVpC A730 87,5
Error in line 82: 4lSV7FKLK S793 90,5
Error in line 90: W5WmmS S793 73,2
Error in line 36: qcdIfQ3Yx S793 151,0
Error in line 106: MBggzb9F A244 -2,2
Error in line 96: MBggzb9F A244 35,9
Error in line 108: MqJlxfMlNf S793 168,5
Error in line 119: MBggzb9F S793 48,9
Error in line 141: MBggzb9F A96 56,4
Error in line 138: MqJlxfMlNf A730 94,3
Error in line 153: MqJlxfMlNf A96 57,5
Error in line 154: MqJlxfMlNf A730 85,5
Error in line 159: MqJlxfMlNf A244 7,3
Error in line 183: MqJlxfMlNf A730 118,01
Error in line 176: MqJlxfMlNf A730 97,6
Error in line 194: qcdIfQ3Yx A730 80,0
Error in line 209: 8QuVpC A730 48,64
Error in line 204: 8QuVpC A730 8,4
Error in line 199: qcdIfQ3Yx A244 12,6
Error in line 201: 4lSV7FKLK A244 0,0
Error in line 221: 8QuVpC S793 58,9
Error in line 247: 8QuVpC A730 47,95
